menubar changes the  gallery

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <li><a href="#">Shop</a></li>
         <li><a href="#">Products</a></li>
         <li><a href="#">Pages</a></li>
-        <li><a href="#">Docs</a></li>
+        <li><a href="#">Gallery</a></li>
       </ul>
 
       <div class="nav-icon">
