add the module more option

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="#">Products</a></li>
         <li><a href="#">Pages</a></li>
         <li><a href="#">Gallery</a></li>
+        <li><a href="">More</a></li>
       </ul>
 
       <div class="nav-icon">
